Compiler/tests/syntax/good/testfile-semicolon-2.rs

fn main() { ;; print!(1);;; print!(2); return; }
