Compiler/tests/syntax/bad/testfile-while-1.rs
fn main() { while true 42; }
